# atm-py

./: .buildinfo  .gitignore  AGENTS.md  LICENSE  README.md  _version.py  aerosols_sizedistribution.html  conda_dependencies.yml  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  run_tests.sh  search.html  searchindex.js  setup.py
.github/workflows/: sphinx_docs.yml  static.yml
.spyproject/config/: workspace.ini
_sources/: installation.rst.txt
atmPy/: __init__.py  opt_imports.py
atmPy/atmosphere/: sounding.py
atmPy/climate/: climate.py
atmPy/data_archives/: icartt.py
atmPy/general/: data_structure.py  flightpath.py  measurement_site.py  statistics.py  timeseries.py  vertical_profile.py
atmPy/plattforms/: __init__.py
atmPy/radiation/: solar.py  surface_albedo.py
atmPy/tools/: array_tools.py  pandas_tools.py  playground.0.1.py  playground.py  plt_tools.py
docs/: aerosols_sizedistribution.rst  conf.py  index.rst  installation.rst  radiation.rst  radiation_api.rst
examples/: aerosols_physics_column_optical_properties.ipynb  aerosols_pysics_hygroscopicity.ipynb  general_measurement_site.ipynb  instruments_POPS_calibration.ipynb  instruments_POPS_calibration_20200107.ipynb  instruments_POPS_file_IO.ipynb  instruments_POPS_mie.ipynb  instruments_POPS_peak.ipynb  instruments_POPS_raw.ipynb  instruments_miniSASP.ipynb  sizedistribution.ipynb
notebooks/: aerosols_sizedistribution_SizeDist.html  aerosols_sizedistribution_SizeDist_LS.html  aerosols_sizedistribution_SizeDist_TS.html  aerosols_sizedistribution_SizeDist_TS.ipynb
(+128 files in other folders)
